<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".EventDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/eventLogoDetail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/event_logo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="src_in"
                android:contentDescription="@string/toggle"
                android:tint="@color/white"
                android:src="@drawable/baseline_favorite_border_24"
                 />

        </FrameLayout>

        <TextView
            android:id="@+id/eventNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/eventOwnerDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_owner"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/eventTimeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/availableQuotaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_quota"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/eventDescriptionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/LinkButton"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_web"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
